--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <span></span>
                     </div>
                     <!-- for mobile -->
-                    <div class="nav-lg nav-md">
+                    <div class="nav-lg">
                             <ul class="list">
                                 <li class="items"><i class="fas fa-times"></i></li>
                                 <li class="items"><a href="#">How we function ?</a></li>
